--- a/Bilinguals/Bilinguals.csproj
+++ b/Bilinguals/Bilinguals.csproj
@@ -173,14 +173,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202109130410555_InitCreate.cs" />
-    <Compile Include="Migrations\202109130410555_InitCreate.Designer.cs">
-      <DependentUpon>202109130410555_InitCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\BilingualDbContext.cs" />
-    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -259,9 +252,14 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202109130410555_InitCreate.resx">
-      <DependentUpon>202109130410555_InitCreate.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\Bilinguals.Data\Bilinguals.Data.csproj">
+      <Project>{17554BDF-1C32-4E02-BE8A-332ACB9308D0}</Project>
+      <Name>Bilinguals.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Bilinguals.Domain\Bilinguals.Domain.csproj">
+      <Project>{56AC93FF-8469-4331-958E-8CDBD036CB5A}</Project>
+      <Name>Bilinguals.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
