Update some view, Bootstrap v5, Configuring Autofac with ASP.NET MVC, Add EF Repository pattern

--- a/Bilinguals.Data/Bilinguals.Data.csproj
+++ b/Bilinguals.Data/Bilinguals.Data.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BilingualDbContext.cs" />
+    <Compile Include="EFRepository.cs" />
     <Compile Include="Migrations\202109130410555_InitCreate.cs" />
     <Compile Include="Migrations\202109130410555_InitCreate.Designer.cs">
       <DependentUpon>202109130410555_InitCreate.cs</DependentUpon>
