--- a/Bilinguals.Domain/Bilinguals.Domain.csproj
+++ b/Bilinguals.Domain/Bilinguals.Domain.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IBilingualDbContext.cs" />
+    <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
