--- a/Bilinguals.Data/Bilinguals.Data.csproj
+++ b/Bilinguals.Data/Bilinguals.Data.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\202109130410555_InitCreate.Designer.cs">
       <DependentUpon>202109130410555_InitCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202109141043026_addSentenceDialog.cs" />
+    <Compile Include="Migrations\202109141043026_addSentenceDialog.Designer.cs">
+      <DependentUpon>202109141043026_addSentenceDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -76,6 +80,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202109130410555_InitCreate.resx">
       <DependentUpon>202109130410555_InitCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109141043026_addSentenceDialog.resx">
+      <DependentUpon>202109141043026_addSentenceDialog.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
