--- a/Bilinguals/Bilinguals.csproj
+++ b/Bilinguals/Bilinguals.csproj
@@ -206,6 +206,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DialogsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SentencesController.cs" />
@@ -318,6 +319,11 @@
     <Content Include="Views\Sentences\Details.cshtml" />
     <Content Include="Views\Sentences\Edit.cshtml" />
     <Content Include="Views\Sentences\Index.cshtml" />
+    <Content Include="Views\Dialogs\Create.cshtml" />
+    <Content Include="Views\Dialogs\Delete.cshtml" />
+    <Content Include="Views\Dialogs\Details.cshtml" />
+    <Content Include="Views\Dialogs\Edit.cshtml" />
+    <Content Include="Views\Dialogs\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
