--- a/Bilinguals.Services/packages.config
+++ b/Bilinguals.Services/packages.config
@@ -10,4 +10,5 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
 </packages>
