--- a/Bilinguals.Domain/Bilinguals.Domain.csproj
+++ b/Bilinguals.Domain/Bilinguals.Domain.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Interfaces\IDialogService.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\ISentenceService.cs" />
+    <Compile Include="Interfaces\IUserDialogService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Models\ApplicationRole.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
