--- a/Bilinguals.Services/Bilinguals.Services.csproj
+++ b/Bilinguals.Services/Bilinguals.Services.csproj
@@ -82,6 +82,7 @@
     <Compile Include="IdentityConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SentenceService.cs" />
+    <Compile Include="UserDialogService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
