--- a/Bilinguals.Services/Bilinguals.Services.csproj
+++ b/Bilinguals.Services/Bilinguals.Services.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SentenceService.cs" />
     <Compile Include="UserDialogService.cs" />
+    <Compile Include="UserSentenceService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
