--- a/Bilinguals/Bilinguals.csproj
+++ b/Bilinguals/Bilinguals.csproj
@@ -330,6 +330,7 @@
     <Content Include="Views\ImportExport\Index.cshtml" />
     <Content Include="Views\Learn\Index.cshtml" />
     <Content Include="Views\Dialogs\MyDialog.cshtml" />
+    <Content Include="Views\Learn\MyLearning.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
