--- a/Bilinguals.Data/Bilinguals.Data.csproj
+++ b/Bilinguals.Data/Bilinguals.Data.csproj
@@ -68,6 +68,26 @@
     <Compile Include="Migrations\202109161545429_addUserdialogUsersentenceUserlearning.Designer.cs">
       <DependentUpon>202109161545429_addUserdialogUsersentenceUserlearning.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202109240232466_removeUserIdAllowNull.cs" />
+    <Compile Include="Migrations\202109240232466_removeUserIdAllowNull.Designer.cs">
+      <DependentUpon>202109240232466_removeUserIdAllowNull.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202109241059112_UpdateDB.cs" />
+    <Compile Include="Migrations\202109241059112_UpdateDB.Designer.cs">
+      <DependentUpon>202109241059112_UpdateDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202109241103047_UpdateDB2.cs" />
+    <Compile Include="Migrations\202109241103047_UpdateDB2.Designer.cs">
+      <DependentUpon>202109241103047_UpdateDB2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202109241113134_Fix.cs" />
+    <Compile Include="Migrations\202109241113134_Fix.Designer.cs">
+      <DependentUpon>202109241113134_Fix.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202109241549570_UpdateDB3.cs" />
+    <Compile Include="Migrations\202109241549570_UpdateDB3.Designer.cs">
+      <DependentUpon>202109241549570_UpdateDB3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -90,6 +110,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202109161545429_addUserdialogUsersentenceUserlearning.resx">
       <DependentUpon>202109161545429_addUserdialogUsersentenceUserlearning.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109240232466_removeUserIdAllowNull.resx">
+      <DependentUpon>202109240232466_removeUserIdAllowNull.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109241059112_UpdateDB.resx">
+      <DependentUpon>202109241059112_UpdateDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109241103047_UpdateDB2.resx">
+      <DependentUpon>202109241103047_UpdateDB2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109241113134_Fix.resx">
+      <DependentUpon>202109241113134_Fix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109241549570_UpdateDB3.resx">
+      <DependentUpon>202109241549570_UpdateDB3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
