--- a/Bilinguals.Data/Bilinguals.Data.csproj
+++ b/Bilinguals.Data/Bilinguals.Data.csproj
@@ -88,6 +88,30 @@
     <Compile Include="Migrations\202109241549570_UpdateDB3.Designer.cs">
       <DependentUpon>202109241549570_UpdateDB3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202109270217576_updateDB4.cs" />
+    <Compile Include="Migrations\202109270217576_updateDB4.Designer.cs">
+      <DependentUpon>202109270217576_updateDB4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202109270236118_updateDBfinal.cs" />
+    <Compile Include="Migrations\202109270236118_updateDBfinal.Designer.cs">
+      <DependentUpon>202109270236118_updateDBfinal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202109270700515_updateDBfinal1.cs" />
+    <Compile Include="Migrations\202109270700515_updateDBfinal1.Designer.cs">
+      <DependentUpon>202109270700515_updateDBfinal1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202109270718258_updateDBfinal2.cs" />
+    <Compile Include="Migrations\202109270718258_updateDBfinal2.Designer.cs">
+      <DependentUpon>202109270718258_updateDBfinal2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202109270726474_updateDBfinal3.cs" />
+    <Compile Include="Migrations\202109270726474_updateDBfinal3.Designer.cs">
+      <DependentUpon>202109270726474_updateDBfinal3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202109270730574_test.cs" />
+    <Compile Include="Migrations\202109270730574_test.Designer.cs">
+      <DependentUpon>202109270730574_test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -125,6 +149,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202109241549570_UpdateDB3.resx">
       <DependentUpon>202109241549570_UpdateDB3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109270217576_updateDB4.resx">
+      <DependentUpon>202109270217576_updateDB4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109270236118_updateDBfinal.resx">
+      <DependentUpon>202109270236118_updateDBfinal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109270700515_updateDBfinal1.resx">
+      <DependentUpon>202109270700515_updateDBfinal1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109270718258_updateDBfinal2.resx">
+      <DependentUpon>202109270718258_updateDBfinal2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109270726474_updateDBfinal3.resx">
+      <DependentUpon>202109270726474_updateDBfinal3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109270730574_test.resx">
+      <DependentUpon>202109270730574_test.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
