--- a/Bilinguals/Bilinguals.csproj
+++ b/Bilinguals/Bilinguals.csproj
@@ -201,6 +201,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App\AppliactionUserExtentions.cs" />
     <Compile Include="App_Start\AutofacHelper.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -208,8 +209,10 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DialogsController.cs" />
+    <Compile Include="Controllers\GroupsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImportExportController.cs" />
+    <Compile Include="Controllers\IrregularVerbsController.cs" />
     <Compile Include="Controllers\LearnController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SentencesController.cs" />
@@ -332,6 +335,16 @@
     <Content Include="Views\Dialogs\MyDialog.cshtml" />
     <Content Include="Views\Learn\MyLearning.cshtml" />
     <Content Include="Views\Sentences\MyFeaturedSentence.cshtml" />
+    <Content Include="Views\IrregularVerbs\Create.cshtml" />
+    <Content Include="Views\IrregularVerbs\Delete.cshtml" />
+    <Content Include="Views\IrregularVerbs\Details.cshtml" />
+    <Content Include="Views\IrregularVerbs\Edit.cshtml" />
+    <Content Include="Views\IrregularVerbs\Index.cshtml" />
+    <Content Include="Views\Groups\Create.cshtml" />
+    <Content Include="Views\Groups\Delete.cshtml" />
+    <Content Include="Views\Groups\Details.cshtml" />
+    <Content Include="Views\Groups\Edit.cshtml" />
+    <Content Include="Views\Groups\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
