--- a/Bilinguals.Domain/Bilinguals.Domain.csproj
+++ b/Bilinguals.Domain/Bilinguals.Domain.csproj
@@ -60,6 +60,7 @@
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Interfaces\IBilingualDbContext.cs" />
     <Compile Include="Interfaces\IDialogService.cs" />
+    <Compile Include="Interfaces\IGroupService.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\ISentenceService.cs" />
     <Compile Include="Interfaces\IUserDialogService.cs" />
