--- a/Bilinguals.Services/Bilinguals.Services.csproj
+++ b/Bilinguals.Services/Bilinguals.Services.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DialogService.cs" />
+    <Compile Include="GroupService.cs" />
     <Compile Include="IdentityConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SentenceService.cs" />
