--- a/Bilinguals/Bilinguals.csproj
+++ b/Bilinguals/Bilinguals.csproj
@@ -277,7 +277,7 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
-    <Content Include="Scripts\dropdown-sentence.js" />
+    <Content Include="Scripts\Components\dropdown-sentence.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
@@ -342,7 +342,6 @@
     <Content Include="Views\Learn\Index.cshtml" />
     <Content Include="Views\Dialogs\MyDialog.cshtml" />
     <Content Include="Views\Learn\MyLearning.cshtml" />
-    <Content Include="Views\Sentences\MyFeaturedSentence.cshtml" />
     <Content Include="Views\IrregularVerbs\Create.cshtml" />
     <Content Include="Views\IrregularVerbs\Delete.cshtml" />
     <Content Include="Views\IrregularVerbs\Details.cshtml" />
@@ -351,6 +350,7 @@
     <Content Include="Views\Groups\Create.cshtml" />
     <Content Include="Views\Groups\Delete.cshtml" />
     <Content Include="Views\Groups\Edit.cshtml" />
+    <Content Include="Views\Groups\MySentence.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
