--- a/Bilinguals/Web.config
+++ b/Bilinguals/Web.config
@@ -8,8 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+	<!-- https://stackoverflow.com/questions/18475195/error-there-is-already-an-open-datareader-associated-with-this-command-which-mu/18475525 -->
   <connectionStrings>
-	  <add name="Bilinguals" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=de0vp_bilinguals;Integrated Security=True;User Id=sa;Password=sa" providerName="System.Data.SqlClient" />
+	  <add name="Bilinguals" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=de0vp_bilinguals;Integrated Security=True;User Id=sa;Password=sa;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"  />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
