--- a/Bilinguals/Bilinguals.csproj
+++ b/Bilinguals/Bilinguals.csproj
@@ -359,6 +359,7 @@
     <Content Include="Views\Images\Create.cshtml" />
     <Content Include="Views\Images\Delete.cshtml" />
     <Content Include="Views\Images\Edit.cshtml" />
+    <Content Include="Views\Manage\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
