--- a/Bilinguals/Bilinguals.csproj
+++ b/Bilinguals/Bilinguals.csproj
@@ -299,7 +299,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\popper.min.js" />
-    <Content Include="Scripts\text-to-speech.js" />
+    <Content Include="Scripts\texttosp.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
