update mysentence view

--- a/Bilinguals/Bilinguals.csproj
+++ b/Bilinguals/Bilinguals.csproj
@@ -248,6 +248,7 @@
     <Content Include="Content\css\bg-animation-card-dialog.css" />
     <Content Include="Content\css\custom-navbar.css" />
     <Content Include="Content\css\home-index.css" />
+    <Content Include="Content\css\my-sentence.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
