--- a/Bilinguals.Data/Bilinguals.Data.csproj
+++ b/Bilinguals.Data/Bilinguals.Data.csproj
@@ -100,6 +100,10 @@
     <Compile Include="Migrations\202110310202522_updateDialog.Designer.cs">
       <DependentUpon>202110310202522_updateDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111041525363_updateCommentTb.cs" />
+    <Compile Include="Migrations\202111041525363_updateCommentTb.Designer.cs">
+      <DependentUpon>202111041525363_updateCommentTb.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -146,6 +150,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110310202522_updateDialog.resx">
       <DependentUpon>202110310202522_updateDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111041525363_updateCommentTb.resx">
+      <DependentUpon>202111041525363_updateCommentTb.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
